# embedding-distance-calculator

./: Cargo.toml  README.md
src/: main.rs
