[package]
name = "distance-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"
pretty-table = "0.1.3"
rig-core = "0.3.0"
semanticsimilarity_rs = "0.1.1"
serde = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
